# 3DPhysicsEngine

./: .clang-format  .clang-tidy  .gitignore  CLA.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  run.sh
.github/workflows/: ci.yml  docs.yml  doxygen-gh-pages.yml  doxygen.yml
benchmarks/Bouncing/: benchmark_analysis.ipynb  main.cpp
benchmarks/Free_Fall/: benchmark.csv  benchmark.ipynb  benchmark_analysis.ipynb  main.cpp
data/materials/: aluminium.yaml  rubber.yaml  steel.yaml  wood.yaml
docs/: Development_Notes.md  ROADMAP.md  To-Do-List.md  To-Do-list.md
examples/Bouncing_Ball/: altitude.csv  altitude.ipynb  config.yml  main.cpp  plotting.ipynb
examples/Bouncing_Ball_2/: main.cpp  plotting.ipynb
examples/Free_Fall/: AnalyticalValue.txt  README.md  computation.ipynb  config.yml  main.cpp  plotting.ipynb
examples/Projectiles/: README.md  computation.ipynb  config.yml  main.cpp  plotting.ipynb
examples/Rolling_Ball/: config.yml  main.cpp
examples/utilities/: computation_utilities.py  motion_utilities.py
lib/: config.hpp  precision.hpp
lib/collision/: broad_collision.hpp  collision.hpp  collision_responce.hpp  collision_response.hpp  contact.hpp  narrow_collision.hpp
lib/mathematics/: common.hpp  math_io.hpp  matrix.hpp  quaternion.hpp  vector.hpp
lib/objects/: AABB.hpp  aabb.hpp  box.hpp  collision.hpp  material.hpp  object.cpp  object.hpp  plane.hpp  sphere.hpp
lib/utilities/: command.hpp  csv.hpp  timer.hpp
lib/world/: config.hpp  integrateRK4.hpp  physics.hpp  physicsWorld.hpp  solver.hpp
output/: plotting.ipynb
python/utilities/: motion_utilities.py  object_utilities.py
scripts/: USAGE.md  USAGE_HELP.md  build.sh  clean.sh  coverage.sh  generate_usage_md.sh  run.sh  tests.sh
scripts/simulation_utilities/: clean_csv.sh
src/: config.cpp  config.yaml  main.cpp
src/collision/: broad_collision.cpp  collision_response.cpp  narrow_collision.cpp
src/mathematics/: common.cpp  math_io.cpp  matrix.cpp  quaternion.cpp  vector.cpp
src/objects/: AABB.cpp  aabb.cpp  collision.cpp  material.cpp  object.cpp  plane.cpp  sphere.cpp
src/utilities/: command.cpp  timer.cpp
src/world/: config.cpp  integrateRK4.cpp  physics.cpp  physicsWorld.cpp
tests/: CMakeLists.txt  test_functions.hpp
tests/collision/: test_broad_phase.cpp  test_collision_response.cpp  test_narrow_phase.cpp  test_rebound.cpp
tests/mathematics/: test_common.cpp  test_matrix.cpp  test_quaternion.cpp  test_vector.cpp
tests/objects/: test_AABB.cpp  test_aabb.cpp  test_object.cpp  test_plane.cpp  test_sphere.cpp
tests/utilities/: test_command.cpp  test_timer.cpp
tests/world/: test_config.cpp  test_physics.cpp  test_physicsworld.cpp
